<resources>
    <string name="app_name">Famous</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_home">Home</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_popular">Popular requests</string>
    <string name="menu_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="det">Twelve-year-old Percy Jackson is on the most dangerous quest of his life.
        With the help of a satyr and a daughter of Athena, Percy must journey across the United States to catch
        a thief who has stolen the original weapon of mass destruction — Zeus’ master bolt.</string>
    <string name="mov">Seventy-year-old widower Ben Whittaker has discovered that retirement
        is not it all it is cracked up to be. Seizing an opportunity to get back in the game,
        he becomes a senior intern at an online fashion site, founded and run by Jules Ostin.</string>
    <string name="app_name">Intro Slider</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

</resources>
