<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.gauharproject.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gauharproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favourite"
        android:name="com.example.gauharproject.ui.notes.NotesFragment"
        android:label="@string/menu_favourite"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.gauharproject.ui.favourite.FavouriteFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.gauharproject.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_popular"
        android:name="com.example.gauharproject.ui.popular.PopularFragment"
        android:label="@string/menu_popular"
        tools:layout="@layout/fragment_popular" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.gauharproject.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>