<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_work_black_18dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:enabled="true"
            android:icon="@drawable/baseline_account_box_black_18dp"
            android:title="@string/menu_profile"
            android:visible="true" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/baseline_favorite_black_18dp"
            android:title="@string/menu_favourite" />
<!--        <item-->
<!--            android:id="@+id/nav_popular"-->
<!--            android:icon="@drawable/popular"-->
<!--            android:title="@string/menu_popular" />-->
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/baseline_list_black_18dp"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/baseline_post_add_black_18dp"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>
</menu>
